# pgmanage

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_org_approval_gate.py  003_payment_discount_days_paid_to.py  004_expense_paid_by_receipt.py  005_billing_periods.py  006_non_refundable_advance.py  007_bookings.py  008_bookings_paid_to.py  009_tenant_id_proof.py  010_activity_log.py  011_rent_plans_updated_at.py  012_website_lead_intake.py  013_website_lead_notify_email.py  014_whatsapp_per_property.py  015_property_upi_and_wa_token.py  016_property_wa_template_overrides.py  017_tenants_notice_given_date.py  018_property_wa_template_params.py  019_tenant_identity.py  020_tenant_vehicle.py  021_menu_uploads.py  022_tenant_inbox.py  023_power_payments.py  024_opening_balance.py  025_job_runs.py  026_notification_detail.py  027_property_team.py  028_roi_payback_plan.py  029_payback_monthly_actual.py  030_lease_term_hike.py  031_annual_hikes.py  032_default_billing_day_to_1.py  033_lead_crm_v2.py  034_fix_lead_status_booked_public.py  035_marketing_role.py  036_room_has_ac.py  037_org_razorpay_payments.py
apps/backend/app/: main.py
apps/backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py  website_lead_cors.py
apps/backend/app/models/: __init__.py  communication.py  expense.py  lead.py  payment.py  platform.py  property.py  schemas_migration.py  tenant.py  user.py
apps/backend/app/services/: audit_constants.py  audit_service.py  billing_period.py  (+7 more)
apps/backend/tests/: conftest.py  test_announcements.py  test_audit_logs.py  test_auth.py  test_dashboard.py  test_expenses.py  test_leads.py  test_marketing_role.py  test_menu.py  test_multitenancy.py  test_online_payments.py  test_overdue_reminders.py  test_payback_plan.py  test_payments.py  test_properties.py  test_property_whatsapp.py  test_rbac.py  test_rent_ledger.py  test_tenant_portal.py  test_tenants.py  test_website_leads.py  test_whatsapp.py
(+304 files in other folders)
